--- a/2_dom/template-v2.html
+++ b/2_dom/template-v2.html
@@ -1,19 +1,28 @@
 <html>
-<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-<div id="app">
-    <p>{{ titulo }}</p>
-    <p>{{ saudacao() }}</p>
-</div>
-<script>
-    new Vue({
-        el: "#app",
-        data: {
-            titulo: "Usando VueJS!"
-        },
-        methods: {
-            saudacao: () => 'Boa semana!'
-        }
-    })
-</script>
+
+<head>
+    <meta charset="utf-8">
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+</head>
+
+<body>
+    <div id="app-2">
+        <span v-bind:title="message">
+            Pare o mouse sobre mim e veja a dica interligada dinamicamente
+        </span>
+
+    </div>
+    <script>
+        let app = new Vue({
+            el: "#app-2",
+            data: {
+                message: "Você carregou esta página em " + new Date().toLocaleString()
+            },
+            methods: {
+                saudacao: () => 'Boa semana!'
+            }
+        })
+    </script>
+</body>
 
 </html>
