--- a/3_condicionais-e-listas/listas-v4.html
+++ b/3_condicionais-e-listas/listas-v4.html
@@ -8,10 +8,14 @@
   <hr />
   <ul>
     <li v-for="pessoa in pessoas">
-      <div v-for="(valor, chave, index) in pessoa">
-        {{ chave }} = {{ valor }} - {{ index + 1}}
-      </div>
+      <span v-for="(valor, chave, index) in pessoa">
+        {{ chave }} = {{ valor }} ({{ index + 1}})
+      </span>
     </li>
+  </ul>
+  <hr />
+  <ul>
+    <li v-for="n in 10">{{ n }}</li>
   </ul>
 </div>
 
