Vue com a Origamid

--- a/cod3r-course/4_projeto_matador_de_monstros/index.html
+++ b/cod3r-course/4_projeto_matador_de_monstros/index.html
@@ -9,9 +9,24 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    <div class="container" id="life"></div>
-    <div class="container" id="ataques"></div>
-    <div class="container" id="log"></div>
+    <div class="container" id="life">
+      <div>Jogador</div>
+      <div>Monstro</div>
+    </div>
+    <div class="container" id="ataques">
+      <ul>
+        <li>Ataque</li>
+        <li>Ataque Especial</li>
+        <li>Curar</li>
+        <li>Desistir</li>
+      </ul>
+    </div>
+    <div class="container" id="log">
+      <ul>
+        <li>Monstro atingiu o jogador com 8.</li>
+        <li>Jogador atingiu Mostron com 7.</li>
+      </ul>
+    </div>
 
     <script src="js/main.js"></script>
   </body>
