Documentado a Vue Instance

--- a/origamid/vue-instance/index.html
+++ b/origamid/vue-instance/index.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="app">
+        {{ instrumento }}
+    </div>
+
+    <div class="container">
+        {{ mensagem }}
+    </div>
     <script src="VueClone.js"></script>
 </body>
 </html>
