--- a/origamid/data-property/exercicio.html
+++ b/origamid/data-property/exercicio.html
@@ -8,30 +8,29 @@
     <title>Exercício de Instance Vue</title>
 </head>
 <body>
-    <div id="app1">
-        {{ instrumento }}
+    <div id="app">
+        {{empresa}}, {{produto}}
     </div>
-    <div id="app2">
-        {{ instrumento }}
+
+    <div id="quadrado">
+        <p>Lado: {{ lado * 4 }}</p>
+        <p>Perímetro: {{ lado * 4 }}</p>
+        <p>Área: {{ lado * lado }}</p>
     </div>
+
     <script>
-        // Crie uma tag com o id app e inicie uma instance vue.
         const vm = new Vue({
             el: "#app",
-        })
-
-        // Faça o HTML funcionar com Vue
-        const vm1 = new Vue({
-            el: "#app1",
             data: {
-                instrumento: "Violao"
+                empresa: "Apple",
+                produto: "iPhone"
             }
         })
 
-        const vm2 = new Vue({
-            el: "#app2",
+        const quadrado = new Vue({
+            el: "#quadrado",
             data: {
-                instrumento: "Guitarra"
+                lado: 20
             }
         })
     </script>
